--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ MarkupSafe==1.1.1
 Werkzeug==1.0.1
 blinker==1.6.2
 colorama==0.4.6
-Flask-MySQLdb==1.0.1
+mysql-connector-python==8.0.33
+protobuf==3.20.3
