--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,8 @@ colorama==0.4.6
 mysql-connector-python==8.0.33
 protobuf==3.20.3
 python-dotenv==0.15.0
+pytest==7.3.1
+pytest-flask==1.2.0
+iniconfig==2.0.0
+packaging==23.1
+pluggy==1.0.0
